# electronics_sales_network

./: .coverage  README.md  pyproject.toml
config/: settings.py  urls.py
network/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
network/migrations/: 0001_initial.py  0002_networknode_level_alter_networknode_debt.py  0003_alter_networknode_name.py  0004_alter_networknode_options_alter_product_options_and_more.py
tests/: fixtures.py  test_network_node.py  test_product.py  test_user.py
users/: admin.py  models.py  permissions.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0003_alter_user_is_active.py
